# liquidation-prevention-agent

./: .env.example  .gitignore  COLOSSEUM_REGISTRATION.md  COLOSSEUM_STRATEGY.md  DELIVERABLES.md  DEMO.md  DEMO_NOW.sh  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_CHECK.md  DEPLOY_NOW.md  DEPLOY_NOW.sh  DEVFOLIO_REGISTRATION.md  ETHDENVER_POLISH_PLAN.md  EXECUTE_NOW.sh  FINAL_STATUS.md  FORUM_ENGAGEMENT_TEMPLATES.md  HENRY_CHECKLIST.md  MANUAL_REGISTRATION.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  REGISTRATION_STRATEGY.md  STATUS.md  SUBMISSION_CHECKLIST.md  VERCEL_DEPLOY.md  VERCEL_DEPLOYMENT.md  VIDEO_NARRATION_SCRIPT.md  colosseum-check-status.sh  colosseum-registration.sh  colosseum-scout-forum.sh  colosseum_create_project.sh  colosseum_forum_browse.sh  colosseum_register.sh  colosseum_status.sh  deploy-frontend.sh  deploy-to-vercel.sh  deploy-vercel.sh  (+9 more)
.vercel/: project.json
agent/: .env.example  __init__.py  agent.py  analyzer.py  config.py  executor.py  main.py  monitor.py  requirements.txt
app/: layout.tsx
colosseum-agent-hackathon/: .colosseum-credentials  .env.example  .gitignore  Anchor.toml  DEMO.md  README.md  REGISTRATION_INSTRUCTIONS.md  (+1 more)
colosseum-agent-hackathon/agent/: activity_logger.py  analyzer.py  config.py  demo.py  executor.py  main.py  pyproject.toml  requirements.txt
colosseum-agent-hackathon/agent/protocols/: __init__.py  base.py  kamino.py  marginfi.py  solend.py
colosseum-agent-hackathon/agent/tests/: __init__.py  test_activity_logger.py  test_analyzer.py  test_executor.py
(+126 files in other folders)
